<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JournWe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="app_id">515340035175937</string>
    <string name="fblogin">Login with facebook</string>
    <string name="title_activity_journ_we">JournWeActivity</string>
    <string name="title_section1">My JournWes</string>
    <string name="title_section2">ID</string>
    <string name="title_section3">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_show_journ_we">ShowJournWeActivity</string>
    <string name="title_tab_section1">Place</string>
    <string name="title_tab_section2">Adventurer</string>
    <string name="title_tab_section3">Date</string>
    <string name="myStatus">You are : --- Set my status</string>
    <string name="participants">Participants</string>
    <string name="status">Status</string>
    <string name="place">Place</string>
    <string name="favPlace">Favorite Location:</string>
    <string name="favPlaceSelected">no favorite location selected</string>
    <string name="yourVote">Your Vote:</string>
    <string name="groupVote">Group Vote:</string>
    <string name="placeHint">Where do you want to go?</string>
    <string name="adventurerHint">Who do you want to invite?</string>
    <string name="dateHint">When do you want to go?</string>
    <string name="favTime">Favorite Time</string>
    <string name="favTimeSelected">no favorite time selected</string>
    <string name="timeStartHint">Start Date</string>
    <string name="timeEndHint">End Date</string>
    <string name="no_description">No description</string>
    
    <string name="create">Create new JournWe</string>
    <string name="title_activity_create_journ_we">New JournWe</string>
    <string name="create_section1">Where?</string>
    <string name="create_section2">Who?</string>
    <string name="create_section3">When?</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="people">People</string>
    <string name="date">Date</string>
    <string name="vote">0.0</string>
    <string name="adventurer">Adventurer</string>
    <string name="invite">Invite your Friends >></string>
    <string name="or">or</string>
    <string name="start">Start your JournWe</string>
    <string name="pick">Pick some Dates >></string>
    <string name="title_activity_create_place">CreatePlace</string>
    <string name="title_activity_create_adventurer">CreateAdventurer</string>
    <string name="title_activity_create_date">CreateDate</string>
    <string name="add">Add Date</string>
    <string name="google_maps_key">AIzaSyCuMcV-IagEP8k3o8K3q7LcgWjT-AKofqE</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="create_name">Choose a name:</string>
    <string name="name_hint">Name</string>
    <string name="detail">Set details</string>

</resources>
