<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:background="#8dc7db"
        android:layout_height="50dp"
        android:layout_width="fill_parent" >
    
        <ImageView 
            android:layout_height="fill_parent"
            android:layout_width="50dp"
            android:src="@drawable/ic_action_go_to_today"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:contentDescription="TODO" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/date"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="#cccfd5d3"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_margin="7dp" >
            
            <ImageView
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:src="@drawable/ic_action_important"
                android:contentDescription="TODO" />
            
            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/favTime"
                android:textSize="17sp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp" />
            
            <TextView
                android:id="@+id/favtime"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/favTimeSelected"
                android:textSize="17sp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="7dp" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/yourVote"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/groupVote"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
        
        <ListView
            android:id="@+id/dateList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp" >
        </ListView>
        
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_margin="7dp" >
            
            <Button
                android:id="@+id/startButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/timeStartHint"
                android:onClick="dateClick"
                android:tag="Start" />

            <Button
                android:id="@+id/endButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/timeEndHint"
                android:onClick="dateClick"
                android:tag="End" />
            
            <Button
                android:id="@+id/date"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_action_new"
                android:onClick="add" />
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>