<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#d28b89" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:src="@drawable/ic_action_group" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="Adventurers"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#cccfd5d3"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/myStatus"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/participants"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/adventurerList"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="25dp" >
        </ListView>
        
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_margin="7dp" >
            
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/adventurerHint" />
            
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_action_new" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>