<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.journwe.android.CreateJournWe$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#99ffffff"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventurerHint" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/adventurertext"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/adventurerHint" />

            <Button
                android:id="@+id/addAdventurer"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_action_new"
                android:onClick="buttonClick" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/adventurerlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#99ffffff" >
        
    </ListView>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border" >

        <Button
            android:id="@+id/pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:minHeight="1dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/pick"
            android:textStyle="bold"
            android:onClick="buttonClick" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/or"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:minHeight="1dp"
            android:padding="5dp"
            android:text="@string/start"
            android:textSize="15sp"
            android:onClick="buttonClick" />
    </RelativeLayout>

</LinearLayout>