<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.journwe.android.CreateJournWe$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#99ffffff"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHint" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/placetext"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/placeHint"
                android:maxLines="1" />

            <Button
                android:id="@+id/addPlace"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_action_new"
                android:onClick="buttonClick" />
        </LinearLayout>
    </LinearLayout>
    
    <ListView
        android:id="@+id/placelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#99ffffff" >
        
    </ListView>

    <!-- <com.google.android.maps.MapView -->
    <!-- xmlns:android="http://schemas.android.com/apk/res/android" -->
    <!-- android:id="@+id/mapview" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="200dp" -->
    <!-- android:apiKey="AIzaSyCuMcV-IagEP8k3o8K3q7LcgWjT-AKofqE" -->
    <!-- android:clickable="true" -->
    <!-- android:layout_below="@+id/l1" /> -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border" >

        <Button
            android:id="@+id/invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:minHeight="1dp"
            android:onClick="buttonClick"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/invite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/or"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:background="#ffffff"
            android:minHeight="1dp"
            android:onClick="buttonClick"
            android:padding="5dp"
            android:text="@string/start"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>