<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:background="#B8C6A5"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:text="Place" >
    
        <ImageView 
            android:layout_height="fill_parent"
            android:layout_width="50dp"
            android:src="@drawable/ic_action_map"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Place"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="#cccfd5d3"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_margin="7dp" >
            
            <ImageView
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:src="@drawable/ic_action_important"
                android:contentDescription="//TODO" />
            
            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/favLocation"
                android:textSize="17sp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp" />
            
            <TextView
                android:id="@+id/location"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="no location selected"
                android:textSize="17sp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="7dp" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/yourVote"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/groupVote"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
        
        <ListView
            android:id="@+id/placeList"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="25dp" >
        </ListView>
        
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_margin="7dp" >
            
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/placeHint" />
            
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_action_new" />
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>